...
                    }
                )
                if (errorTitulo)
                    Text(
                        text = "*Obligatorio",
                        color = MaterialTheme.colorScheme.error,
                        modifier = Modifier.testTag("Titulo es obligatorio")
                    )

                InsertSpacer(8)
                OutlinedTextField(//Categoría
                    value = categoria,
                    onValueChange = {
...
                        color = MaterialTheme.colorScheme.onBackground
                    )
                    IconButton(
                        onClick = {
                            favorito = !favorito
                        },
                        modifier = Modifier.testTag("Alternar favorito")
                    ) {
                        if (favorito) {
                            Icon(
                                imageVector = Icons.Filled.Favorite,
                                contentDescription = "Marcado favorito",
                                tint = animColor1,
...
                                esFechaValida = false
                                errorTitulo = true
                                errorCategoria = true
                            }
                        },
                        modifier = Modifier
                            .testTag("Guardar evento"),
                        enabled = (esFechaValida && !errorTitulo && !errorCategoria)
                    ) {
                        Text("Guardar", fontSize = 20.sp)
                    }
                }
            }
...
