...

    Card(
        modifier = Modifier
            .fillMaxWidth()
            .padding(8.dp)
            .clickable { navController.navigate("3-DetalleEvento/${evento.toJson()}") }
            .testTag("Evento"),//Para los Tests de UI
        elevation = CardDefaults.cardElevation(4.dp),
    ) {
        Column(modifier = Modifier.padding(16.dp)) {
            //Mostramos el título del evento
            Text(
                text = evento.titulo,
...
                horizontalArrangement = Arrangement.SpaceBetween
            ) {
                //Indicamos con un icono si el evento está en favoritos
                if (evento.favorito) {
                    Icon(
                        imageVector = Icons.Outlined.Favorite,
                        contentDescription = "Evento favorito",
                        tint = Color.Red,
                        modifier = Modifier.size(25.dp)
                    )
                } else {
                    Icon(
                        imageVector = Icons.Outlined.FavoriteBorder,
...
        onClick = {
            val evento = getNewEvento()
            navController.navigate("4-EditarEvento/${evento.toJson()}")
        },
        shape = RoundedCornerShape(50),
        modifier = Modifier
            .testTag("CrearEventoFAB")
            .drawBehind {
                rotate(value) {
                    drawCircle(
                        gradientBrush, style = Stroke(width = 30.dp.value),
                        radius = 75f
                    )
...
