...
        modifier = Modifier
            .fillMaxSize()
    ) {
        Column(
            Modifier
                .fillMaxSize()
                .testTag("Pantalla de Inicio")
                .clickable {
                    navController.navigate(route = "2-MostrarEventos")
                }
                .verticalScroll(rememberScrollState()), //Con posibilidad de hacer scroll,
            verticalArrangement = Arrangement.SpaceEvenly,
            horizontalAlignment = Alignment.CenterHorizontally
...
                    repeatMode = RepeatMode.Reverse
                ),
                label = "Animación desvanecer"
            )

            Text(
                text = "Toca para comenzar",
                modifier = Modifier.alpha(value),
                fontSize = 24.sp,
                fontWeight = FontWeight.Bold
            )

            InsertSpacer(32)
...
