...
fun EditarFAB(navController: NavController, evento: Evento) {
    ExtendedFloatingActionButton(
        onClick = { navController.navigate("4-EditarEvento/${evento.toJson()}") },
        text = {
            Text(text = "EDITAR")
        },
        modifier = Modifier.testTag("Editar evento FAB"),
        icon = { Icon(Icons.Filled.Edit, "Editar evento") }
    )
}


//Funcion que define la BottomAppBar
...
